--- a/docs/docs/classic-ml/deployment/index.mdx
+++ b/docs/docs/classic-ml/deployment/index.mdx
@@ -35,7 +35,7 @@ By using MLflow deployment toolset, you can enjoy the following benefits:
 
 ## Concepts
 
-### [MLflow Model](/model)
+### [MLflow Model](/ml/model)
 
 [MLflow Model](/ml/model) is a standard format that packages a machine learning model with its metadata, such as dependencies and inference schema.
 You typically create a model as a result of training execution using the [MLflow Tracking APIs](/ml/tracking), for instance, <APILink fn="mlflow.pyfunc.log_model" />.
