--- a/docs/docs/model/index.mdx
+++ b/docs/docs/model/index.mdx
@@ -3977,20 +3977,29 @@ print(f"\nPyfunc 'predict_interval':\n${response.json()}")
 
 ## Automatic Model Dependency Locking
 
-By default, MLflow only pins the direct dependencies of the model and doesn't lock the transitive dependencies (e.g., `numpy` installed by `scikit-learn`).
-To lock both direct and transitive dependencies of the model, you can enable automatic dependency locking by setting the environment variable `MLFLOW_LOCK_MODEL_DEPENDENCIES` to `true`.
+By default, MLflow only pins the direct dependencies of your model (for example, `scikit-learn` for a `scikit-learn` model), but does **not** lock transitive dependencies (such as `numpy` installed by `scikit-learn`). This can sometimes lead to inconsistencies when deploying or sharing models, as transitive dependencies may change over time.
+
+To ensure fully reproducible environments, MLflow supports **automatic dependency locking**. When enabled, MLflow will lock both direct and transitive dependencies, generating a complete, deterministic set of package versions for your model.
+
+### How to Enable Dependency Locking
+
+Set the environment variable `MLFLOW_LOCK_MODEL_DEPENDENCIES` to `true` before logging your model:
 
 ```sh
 export MLFLOW_LOCK_MODEL_DEPENDENCIES=true
 ```
 
-MLflow uses [uv](https://docs.astral.sh/uv/) to lock the dependencies. If `uv` is not installed, you can install it with the following command:
+With this setting, MLflow will use [uv](https://docs.astral.sh/uv/) to resolve and lock all dependencies when saving or logging a model.
+
+### Installing `uv`
+
+If `uv` is not already installed, you can add it with:
 
 ```sh
 pip install uv
 ```
 
-For other installation methods, refer to the [uv installation guidance](https://docs.astral.sh/uv/getting-started/installation).
+For other installation options, see the [uv installation guide](https://docs.astral.sh/uv/getting-started/installation).
 
 ## Validate Models before Deployment
 
